--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,18 +2,28 @@ name: pokedex
 description: A Pokedex built with Flutter.
 
 # Prevent accidental publishing to pub.dev.
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
+flutter_version: 3.10.1
 
 environment:
-  sdk: '>=3.0.1 <4.0.0'
+  sdk: ">=3.0.1 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
+  flutter_svg: ^2.0.6
+  riverpod: ^2.3.6
+  flutter_riverpod: ^2.3.6
+  riverpod_annotation: ^2.1.1
+  http: ^1.0.0
+  cached_network_image: ^3.2.3
+  hooks_riverpod: ^2.3.6
+  flutter_hooks: ^0.18.6
+
+dependency_overrides:
+  http: ^1.0.0
 
 dev_dependencies:
   flutter_test:
@@ -21,13 +31,17 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   build_runner: ^2.4.4
   flutter_gen_runner: ^5.3.1
+  riverpod_generator: ^2.2.3
 
 flutter:
   uses-material-design: true
 
-  # Enable generation of localized Strings from arb files.
-  generate: true
-
   assets:
-    # Add assets from the images directory to the application.
-    - assets/images/
+    - assets/icons/
+
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins/Poppins-Regular.ttf
+        - asset: assets/fonts/Poppins/Poppins-Bold.ttf
+          weight: 700
